--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,7 @@
 == [ PID Tuning ] ==
 -- 1000 0.8 8000 - seems to hold way down well (ie: SP: 38, Ambient: 63), but continues to drive down during normal ferm (ie: SP: 68, Ambient: 63)
--- 1000 20 0 -
+-- 1000 100 1 - decent, but tends to overshoot down - does not shut down fast enough
+-- 5000 20 100 - 7/29/2017 - 
 
 == [ How To Compile / Flash ] ==
 -- compile --
@@ -21,15 +22,24 @@ particle subscribe mine $PARTICLE_DEVICE
  if the temp is more than X below, use 0 (ignore pid output) +PID
  if the temp is more than Y above, use 100 (ignore pid output) +PID
 
+ add notification for device reset
+ add notification for over/under temp - but only after it has reached target
+ add notification for repeated WPS failures
+
+
 == [ Blynk Pinouts ] ==
+V12 Fan
+
 -- F1
 V7 Target
 V14 PID %
-    Error
+V16 Error
 V1 Current
+V18 Pump State
 
 -- F2
-V8
+V8 Target
 V15 PID
-
+V17 Error
 V2 Current
+V19 Pump State
