--- a/todo.txt
+++ b/todo.txt
@@ -1,18 +1,18 @@
 == [ PID Tuning ] ==
 -- 1000 0.8 8000 - seems to hold way down well (ie: SP: 38, Ambient: 63), but continues to drive down during normal ferm (ie: SP: 68, Ambient: 63)
 -- 1000 100 1 - decent, but tends to overshoot down - does not shut down fast enough
--- 5000 20 100 - 7/29/2017 - 
+-- 5000 20 100 - 7/29/2017 -
 
 == [ How To Compile / Flash ] ==
 -- compile --
 // make clean / all / main
 make all PLATFORM=photon APPDIR=/c/Code/particle/projects/ChronicleController
+make main PLATFORM=photon APPDIR=/c/Code/particle/projects/ChronicleController
+
 
 -- flash --
 export PARTICLE_DEVICE=230026001347343432313031
 particle login
-particle flash eklo_photon ChronicleController.bin
-particle flash $PARTICLE_DEVICE target/ChronicleController.bin
 particle flash $PARTICLE_DEVICE ../projects/ChronicleController/target/ChronicleController.bin
 
 -- monitor
